@@ -1,5 +1,17 @@
 2008-08-04  Mark Rowe  <mrowe@apple.com>
 
+        Reviewed by Kevin Decker.
+
+        Adopt the formal protocols where necessary.
+        Final part of fix for <rdar://problem/5853147>.
+
+        * WebCoreSupport/WebInspectorClient.mm:
+        * WebView/WebHTMLView.mm:
+        * WebView/WebView.mm:
+        (-[WebView _openFrameInNewWindowFromMenu:]):
+
+2008-08-04  Mark Rowe  <mrowe@apple.com>
+
         Reviewed by Darin Adler.
 
         Declare empty protocols when using versions of AppKit that do not use formal protocols for delegates and data sources.
